<resources>
    <string name="app_name">GeoApp</string>
    <string name="texto_boton_cierto">Cierto</string>
    <string name="texto_boton_falso">Falso</string>
    <string name="texto_boton_anterior">anterior</string>
    <string name="texto_boton_siguiente">Siguiente</string>
    <string name="texto_boton_ver_respuesta">Ver respuesta</string>
    <string name="texto_correcto">¡Correcto!</string>
    <string name="texto_incorrecto">¡Incorrecto!</string>
    <string name="texto_boton_mostrar_respuesta">Mostrar respuesta</string>
    <string name="texto_pregunta_1">¿La peninsula de Yucatan esta en el norte de Mexico?</string>
    <string name="texto_pregunta_2">¿Nuestro Sistema Solar se encuentra en la galaxia Via Lactia?</string>
    <string name="texto_pregunta_3">¿El Oceáno más grande de nuestro planeta es el Oceáno Pacifico?</string>
    <string name="texto_pregunta_4">¿Los vientos alisios soplan del noreste al suereste?</string>
    <string name="texto_pregunta_5">¿El estado más grande de nuestra Republica Mexicana es Sonora?</string>
    <string name="texto_aviso">¿Estas seguro de lo que haces?</string>
    <string name="RespuestaEsCorrecta">Respuesta_es_correcta</string>

</resources>
